--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -1,43 +1,23 @@
 {% extends "posts/base.html"  %}
  
-{% block title %}
-    Insta - {{ block.super }}
-{% endblock %}
  
 {% block content %}
- 
-    <div class="content">
-        <div class="section-inner clearfix">
- 
-        <h3>Login Form</h3>
- 
-        {% if messages %}
-            <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
- 
-        <form action="" method="post">
-            {% csrf_token %}
-            <table>
-                <tr>
-                    <td><label for="id_username">Enter username</label></td>
-                    <td><input type="text" id="id_username" name="username"></td>
-                </tr>
-                <tr>
-                    <td><label for="id_username">Enter password</label></td>
-                    <td><input type="password" id="id_password" name="password"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Submit"></td>
-                </tr>
-            </table>
-        </form>
- 
-        </div>
-    </div>
- 
+    <h3>Log In!</h3>
+
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <p>
+            <label for="id_username">Username</label>
+            <input type="text" name="username" id="id_username" required>
+        </p>
+        <p>
+            <label for="id_password">Password</label>
+            <input type="password" name="password" id="id_password" required>
+        </p>
+        <input type="submit" value="login">
+    </form>
 {% endblock %}
