cant push project live

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -4,7 +4,7 @@
     <head>  
         {% load static %}    
         <style>
-            body {background-color: lightgoldenrodyellow; margin: 80px}
+            body {background-color: rgb(144, 207, 221); margin: 80px}
             h1   {color: blue; padding: 10px}
             p    {color: red;}
             </style>                    
